# pytr

./: .gitignore  pyproject.toml
pytr/: account.py  api.py  details.py  liveticker.py  main.py  pipetest.py  portfolio.py  utils.py
